# async-aggregation

./: .gitignore  docker-compose.yml
aiohttp_server/: Dockerfile  pyproject.toml
flask_server/: Dockerfile  app.py  image_processing.py  pyproject.toml
