[tool.poetry]
name = "aiohttp_server"
version = "0.1.0"
description = ""
authors = ["Alex <aleks.krutsko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiosignal = "^1.3.1"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
