[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Alex <aleks.krutsko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Pillow = "^9.3.0"
torch = "^1.13.0"
torchvision = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
